# WaterTracker

./: alembic.ini  pyproject.toml
alembic/versions/: 3e85a8ea71a0_v2_create_table_users.py  a42bb23752b2_v1_add_column_day.py  d8126ddb0cfe_v0_create_table.py
app/: database.py  main.py
app/api/: __init__.py  item.py
app/auth/: __init__.py  config.py  item.py  routers.py
app/crud/: __init__.py  item.py
app/models/: __init__.py  item.py
app/schemas/: __init__.py  item.py
app/static/: style.css
app/templates/: index.html
