[tool.poetry]
name = "watertracker"
version = "0.1.0"
description = ""
packages = [{ include = "watertracker" }]
authors = ["Wkdk00 <astaningosha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"